--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
+    "@ctrl/ngx-csv": "^2.1.0",
+    "convert-csv-to-json": "0.0.15",
     "ng-gapi": "0.0.73",
+    "ngx-papaparse": "^4.0.4",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
